refactor: Split code into data 1 to 4

--- a/full_pipeline_data4.ipynb
+++ b/full_pipeline_data4.ipynb
@@ -279,24 +279,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# # add: 增加filter，刪除list中重複的元素（刪掉短的元素）\n",
-        "# def filter_nps(nps: List[str])-> List[str]:\n",
-        "#     n = len(nps)\n",
-        "#     if n==0:\n",
-        "#         return []\n",
-        "#     result = [nps[0]]\n",
-        "#     for s in nps:\n",
-        "#         if s not in result[len(result)-1]:\n",
-        "#             result.append(s)\n",
-        "#     return result"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
         "def filter_nps(nps: List[str], bound: int)-> List[str]:\n",
         "    n = len(nps)\n",
         "    if n == 0:\n",
@@ -488,206 +470,6 @@
         "  for c in str:\n",
         "    res += BOW[c]\n",
         "  return 1/(res+1) # +1 to avoid 0 case"
-      ]
-    },
-    {
-      "attachments": {},
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "4 methods of get_pred_pages"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# # 想辦法拉高Precision\n",
-        "# from collections import Counter\n",
-        "# import math\n",
-        "\n",
-        "# def get_pred_pages(series_data: pd.Series) -> Set[Dict[int, str]]:\n",
-        "#     results = []\n",
-        "#     mapping = {}\n",
-        "#     claim = series_data[\"claim\"]\n",
-        "#     nps = series_data[\"hanlp_results\"]\n",
-        "#     first_wiki_term = []\n",
-        "#     claimBOW = Counter() # May need a weigihted probability\n",
-        "#     for c in claim:\n",
-        "#       if c.isalpha():\n",
-        "#         claimBOW[c] += 1\n",
-        "\n",
-        "#     for i, np in enumerate(nps):\n",
-        "#         # Simplified Traditional Chinese Correction\n",
-        "#         wiki_search_results = [\n",
-        "#             do_st_corrections(w) for w in wikipedia.search(np)\n",
-        "#         ]\n",
-        "\n",
-        "#         for term in wiki_search_results:\n",
-        "#             # if \" \" in term:\n",
-        "#             #   print(term.split(\" \")[0], term)\n",
-        "#             matched = False\n",
-        "#             if i == 0:\n",
-        "#                 first_wiki_term.append(term)\n",
-        "\n",
-        "#             if (((new_term := term) in claim) or\n",
-        "#                 ((new_term := term.replace(\"·\", \"\")) in claim) or\n",
-        "#                 ((new_term := term.split(\" \")[0]) in claim) or\n",
-        "#                 ((new_term := term.replace(\"-\", \"\")) in claim)):\n",
-        "#                 matched = True\n",
-        "\n",
-        "#             elif \"·\" in term:\n",
-        "#                 splitted = term.split(\"·\")\n",
-        "#                 for split in splitted:\n",
-        "#                     if (new_term := split) in claim:\n",
-        "#                         matched = True\n",
-        "#                         break\n",
-        "\n",
-        "#             if matched:\n",
-        "#                 term = term.replace(\" \", \"_\")\n",
-        "#                 term = term.replace(\"-\", \"\")\n",
-        "#                 results.append(term)\n",
-        "#                 mapping[term] = math.log(claim.find(new_term)+1) * overlap(claimBOW, term)\n",
-        "\n",
-        "#     # 5 is a hyperparameter\n",
-        "#     if len(results) > 5:\n",
-        "#         assert -1 not in mapping.values()\n",
-        "#         results = sorted(mapping, key=mapping.get)[:5]\n",
-        "#     if len(results) < 1:\n",
-        "#         results = first_wiki_term[:1]\n",
-        "\n",
-        "#     return set(results)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# # 構想 - 證據會均勻分布在claim中的每個部份\n",
-        "# from collections import Counter\n",
-        "# import math\n",
-        "\n",
-        "# def get_pred_pages(series_data: pd.Series) -> Set[Dict[int, str]]:\n",
-        "#     results = []\n",
-        "#     mapping = {}\n",
-        "#     new_mapping = [{}, {}, {}, {}, {}, {}] # 五個part\n",
-        "#     claim = series_data[\"claim\"]\n",
-        "#     nps = series_data[\"hanlp_results\"]\n",
-        "#     first_wiki_term = []\n",
-        "#     claimBOW = Counter() # May need a weigihted probability\n",
-        "#     for c in claim:\n",
-        "#       if c.isalpha():\n",
-        "#         claimBOW[c] += 1\n",
-        "\n",
-        "#     for i, np in enumerate(nps):\n",
-        "#         # Simplified Traditional Chinese Correction\n",
-        "#         wiki_search_results = [\n",
-        "#             do_st_corrections(w) for w in wikipedia.search(np)\n",
-        "#         ]\n",
-        "\n",
-        "#         for term in wiki_search_results:\n",
-        "#             # if \" \" in term:\n",
-        "#             #   print(term.split(\" \")[0], term)\n",
-        "#             matched = False\n",
-        "#             if i == 0:\n",
-        "#                 first_wiki_term.append(term)\n",
-        "\n",
-        "#             if (((new_term := term) in claim) or\n",
-        "#                 ((new_term := term.replace(\"·\", \"\")) in claim) or\n",
-        "#                 ((new_term := term.split(\" \")[0]) in claim) or\n",
-        "#                 ((new_term := term.replace(\"-\", \"\")) in claim)):\n",
-        "#                 matched = True\n",
-        "\n",
-        "#             elif \"·\" in term:\n",
-        "#                 splitted = term.split(\"·\")\n",
-        "#                 for split in splitted:\n",
-        "#                     if (new_term := split) in claim:\n",
-        "#                         matched = True\n",
-        "#                         break\n",
-        "\n",
-        "#             if matched:\n",
-        "#                 term = term.replace(\" \", \"_\")\n",
-        "#                 term = term.replace(\"-\", \"\")\n",
-        "#                 results.append(term)\n",
-        "#                 part = math.floor(claim.find(new_term) / len(claim) * 5)\n",
-        "#                 new_mapping[part][term] = mapping[term] = math.log(claim.find(new_term)+1) * overlap(claimBOW, term)\n",
-        "#                 # new_mapping[part][term] = mapping[term] = overlap(claimBOW, term) # 完全拿掉index的影響(好像完全沒差)\n",
-        "\n",
-        "#     # 5 is a hyperparameter\n",
-        "#     # post-processing\n",
-        "#     for m in new_mapping:\n",
-        "#         results += sorted(m, key=m.get)[:1] # 問題 不一定每個part都有相對應的文章\n",
-        "#     for r in sorted(mapping, key=mapping.get):\n",
-        "#         if len(results) >= 5:\n",
-        "#             break\n",
-        "#         if r not in results:\n",
-        "#             results += r\n",
-        "#     if len(results) < 1:\n",
-        "#         results = first_wiki_term[:1]\n",
-        "\n",
-        "#     return set(results)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# # 想辦法拉大Recall\n",
-        "# def get_pred_pages(series_data: pd.Series) -> Set[Dict[int, str]]:\n",
-        "#     results = []\n",
-        "#     claim = series_data[\"claim\"]\n",
-        "#     nps = series_data[\"hanlp_results\"]\n",
-        "#     first_wiki_term = []\n",
-        "\n",
-        "#     for i, np in enumerate(nps):\n",
-        "#         wiki_search_results = [\n",
-        "#             do_st_corrections(w) for w in wikipedia.search(np)\n",
-        "#         ]\n",
-        "\n",
-        "#         for term in wiki_search_results:\n",
-        "#             # if \" \" in term:\n",
-        "#             #   print(term.split(\" \")[0], term)\n",
-        "#             matched = False\n",
-        "#             if i == 0:\n",
-        "#                 first_wiki_term.append(term)\n",
-        "\n",
-        "#             if (((new_term := term) in claim) or\n",
-        "#                 ((new_term := term.replace(\"·\", \"\")) in claim) or\n",
-        "#                 ((new_term := term.split(\" \")[0]) in claim) or\n",
-        "#                 ((new_term := term.replace(\"-\", \"\")) in claim)):\n",
-        "#                 matched = True\n",
-        "\n",
-        "#             elif \"·\" in term:\n",
-        "#                 splitted = term.split(\"·\")\n",
-        "#                 for split in splitted:\n",
-        "#                     if (new_term := split) in claim:\n",
-        "#                         matched = True\n",
-        "#                         break\n",
-        "            \n",
-        "#             # 以重疊率來抓出上述規則之外的文章(對precision的影響很大)\n",
-        "#             length = len([t for t in term if t.isalpha()])\n",
-        "#             res = 0\n",
-        "#             for c in claim:\n",
-        "#                 if c.isalpha() and c in term:\n",
-        "#                     res += 1\n",
-        "#             if length > 5 and res/length > 0.7:\n",
-        "#                 results.append(term)\n",
-        "\n",
-        "#             if matched:\n",
-        "#                 term = term.replace(\" \", \"_\")\n",
-        "#                 term = term.replace(\"-\", \"\")\n",
-        "#                 results.append(term)\n",
-        "\n",
-        "#     if len(results) < 1:\n",
-        "#         results = first_wiki_term\n",
-        "\n",
-        "#     return set(results)"
       ]
     },
     {
@@ -2889,7 +2671,7 @@
       "outputs": [],
       "source": [
         "wiki_pages = jsonl_dir_to_df(\"data/wiki-pages\")\n",
-        "mapping = generate_evidence_to_wiki_pages_mapping(wiki_pages,)\n",
+        "mapping = generate_evidence_to_wiki_pages_mapping(wiki_pages)\n",
         "del wiki_pages\n",
         "\n",
         "### mapping : {\n",
@@ -3124,10 +2906,10 @@
       "outputs": [],
       "source": [
         "MODEL_NAME = \"bert-base-chinese\"  #@param {type:\"string\"}\n",
+        "NUM_EPOCHS = 20  #@param {type:\"integer\"}\n",
         "TRAIN_BATCH_SIZE = 25  #@param {type:\"integer\"}\n",
         "TEST_BATCH_SIZE = 25  #@param {type:\"integer\"}\n",
         "LR = 1e-5  #@param {type:\"number\"}\n",
-        "NUM_EPOCHS = 20  #@param {type:\"integer\"}\n",
         "MAX_SEQ_LEN = 256  #@param {type:\"integer\"}\n",
         "EVIDENCE_TOPK = 5  #@param {type:\"integer\"}"
       ]
